<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".budget.addBudget.AddNewBudgetFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="Название категории"
        android:textColor="@color/all_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/category_name_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:inputType="text"
        android:text="@string/category_name"
        android:textAlignment="center"
        android:textColor="@color/all_text_color"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="Сумма расхода"
        android:textColor="@color/all_text_color"
        app:layout_constraintEnd_toEndOf="@+id/category_name_et"
        app:layout_constraintStart_toStartOf="@+id/category_name_et"
        app:layout_constraintTop_toBottomOf="@+id/category_name_et" />

    <EditText
        android:id="@+id/categoty_summ_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:inputType="number"
        android:text="@string/edittext_null"
        android:textAlignment="center"
        android:textColor="@color/all_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/category_name_incom_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:background="@drawable/rounded_edittext_register_login"
        android:text="@string/income_one"
        android:textAlignment="center"
        android:textColor="@color/all_text_color"
        app:layout_constraintEnd_toStartOf="@+id/category_name_incom_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoty_summ_et" />

    <EditText
        android:id="@+id/category_name_incom_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:background="@drawable/rounded_edittext_register_login"
        android:text="@string/income_two"
        android:textAlignment="center"
        android:textColor="@color/all_text_color"
        app:layout_constraintEnd_toStartOf="@+id/category_name_incom_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/category_name_incom_1"
        app:layout_constraintTop_toBottomOf="@+id/categoty_summ_et" />

    <EditText
        android:id="@+id/category_name_incom_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:background="@drawable/rounded_edittext_register_login"
        android:text="@string/income_three"
        android:textAlignment="center"
        android:textColor="@color/all_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/category_name_incom_2"
        app:layout_constraintTop_toBottomOf="@+id/categoty_summ_et" />

    <EditText
        android:id="@+id/category_name_incom_summ_1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:inputType="number"
        android:text="@string/edittext_null"
        android:textAlignment="center"
        android:textColor="@color/all_text_color"
        app:layout_constraintEnd_toEndOf="@+id/category_name_incom_1"
        app:layout_constraintStart_toStartOf="@+id/category_name_incom_1"
        app:layout_constraintTop_toBottomOf="@+id/category_name_incom_1" />

    <EditText
        android:id="@+id/category_name_incom_summ_2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:inputType="number"
        android:text="@string/edittext_null"
        android:textAlignment="center"
        android:textColor="@color/all_text_color"
        app:layout_constraintEnd_toEndOf="@+id/category_name_incom_2"
        app:layout_constraintStart_toStartOf="@+id/category_name_incom_2"
        app:layout_constraintTop_toBottomOf="@+id/category_name_incom_2" />

    <EditText
        android:id="@+id/category_name_incom_summ_3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:inputType="number"
        android:text="@string/edittext_null"
        android:textAlignment="center"
        android:textColor="@color/all_text_color"
        app:layout_constraintEnd_toEndOf="@+id/category_name_incom_3"
        app:layout_constraintStart_toStartOf="@+id/category_name_incom_3"
        app:layout_constraintTop_toBottomOf="@+id/category_name_incom_3" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:background="@drawable/rounded_edittext_register_login"
        app:layout_constraintEnd_toEndOf="parent"
        android:popupBackground="@color/my_night"
        app:layout_constraintStart_toStartOf="parent"
        android:entries="@array/month"
        app:layout_constraintTop_toBottomOf="@+id/category_name_incom_summ_2" />

    <Button
        android:id="@+id/add_new_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="Добавить"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/rounded_edittext_register_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>